# minio-rust

./: Cargo.toml  README.md
